--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lucia-auth/adapter-mongodb": "^1.0.3",
     "@node-rs/argon2": "^1.8.3",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "lucia": "^3.2.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.5.2",
